test: add coverage for webclient controller